--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,12 @@
-{% load staticfiles %}
-{% load static %}
+<!--{% load staticfiles %}-->
+<!--{% load static %}-->
 
 <html>
+<head>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
+</head>
 <body>
 <div class = "top-bar">
     <section class="top-bar-section">
@@ -17,7 +21,22 @@
         </ul>
     </section>
 </div>
-<h1>Hello</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4 col-lg-offset-4">
+            <h1>Hello!</h1>
+            <div>
+                <form action="" method="post">{% csrf_token %}
+                    {{ form.as_p }}
+                    <div>
+                        <button type="submit" class="btn btn-primary">Отправить</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% block login %}{% endblock %}
 </body>
 </html>
