--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,7 @@
 <html>
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 <body>
+
 <div class = "top-bar">
     <section class="top-bar-section">
         <ul>
@@ -18,6 +19,7 @@
     </section>
 </div>
 <h1>Hello</h1>
+  <p>{{ current_day }}</p>
 {% block login %}{% endblock %}
 </body>
 </html>
