--- a/templates/main.html
+++ b/templates/main.html
@@ -27,14 +27,14 @@
     <div class="row">
         <div class="col-lg-4 col-lg-offset-4">
             <h1>Hello!</h1>
-            <div>
-                <form action="" method="post">{% csrf_token %}
-                    {{ form.as_p }}
-                    <div>
-                        <button type="submit" class="btn btn-primary">Отправить</button>
-                    </div>
-                </form>
-            </div>
+            <!--<div>-->
+                <!--<form action="" method="post">{% csrf_token %}-->
+                    <!--{{ form.as_p }}-->
+                    <!--<div>-->
+                        <!--<button type="submit" class="btn btn-primary">Отправить</button>-->
+                    <!--</div>-->
+                <!--</form>-->
+            <!--</div>-->
         </div>
     </div>
 </div>
