--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,10 @@
 <!--{% load staticfiles %}-->
-<!--{% load static %}-->
+{% extends 'base.html' %}
+{% load static %}
 
+{% block content %}
+
+{% endblock %}
 <html>
 <head>
 
