--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,3 +21,11 @@
     overflow: hidden;
     background-color: #a1c1ab;
     }
+.product-item{
+    height: 200px;
+    background-color: white;
+    border: 1px solid lightgrey;
+    position: relative;
+    padding: 5px;
+    text-align: center;
+    }
