--- a/templates/main.html
+++ b/templates/main.html
@@ -11,6 +11,23 @@
 <body>
 {% include 'navbar.html' %}
 
+<aside id="menu">
+    <div class="slimScrollDiv" style="position: relative; overflow: hidden; width:auto; height: 100%;">
+        <ul class="nav" id="side-menu">
+            <li class="active">
+                <a href="/">
+                    <span class="nav-label"> safd </span>
+                </a>
+            </li>
+            <li>
+                <a href="/">
+                    <span class="nav-label"> test </span>
+                </a>
+            </li>
+        </ul>
+    </div>
+</aside>>
+
 <div class="container">
     <div class="row">
         <div class="col-lg-4 col-lg-offset-4">
