--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -28,7 +28,7 @@
 
     </div>
 
-     {% include 'footer.html' %}
+     <!--{% include 'footer.html' %}-->
 
 
     <!-- jQuery -->
@@ -38,3 +38,4 @@
 
 
 </body>
+</html>
