--- a/templates/main.html
+++ b/templates/main.html
@@ -62,10 +62,11 @@
           <!--{% endfor %}-->
         {% for imageInAdv in imagesInAdv %}
             <div class="col-lg-3">
-                <a href="{%  url 'adv' imageInAdv.id %}">
+                <a href="{%  url 'adv' imageInAdv.adv_id %}">
                     <div class="product-item">
                         <div>
                           <img src="{{ imageInAdv.image.url }}" >
+                        <!--<img src="/static/media/images_adv/puzzle.png   "-->
                         </div>
                       <h4> {{ imageInAdv.adv.subj }} </h4>
                         <p>
