--- a/templates/main.html
+++ b/templates/main.html
@@ -50,16 +50,23 @@
                 <a href="{%  url 'adv' adv.id %}">
                     <div class="product-item">
                         <div>
-                          <img src="{{ adv.image.url}}" >
+                          {% for image in adv.imageinadv_set.all %}
+                            <img src="{{ image.image.url}}" class="product-image">
+                          {% endfor %}
                         </div>
                       <h4> {{ adv.subj }} </h4>
                         <p>
                             {{ adv.comments|truncatechars_html:40 }}
                         </p>
+                        <p>
+                            {{ adv.test_set.f }}
+                        </p>
                     </div>
                 </a>
             </div>
           {% endfor %}
+
+
         <!--{% for imageInAdv in imagesInAdv %}-->
             <!--<div class="col-lg-3">-->
                 <!--<a href="{%  url 'adv' imageInAdv.adv_id %}">-->
