--- a/loginsys/templates/register.html
+++ b/loginsys/templates/register.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %}
+<!--{% extends 'main.html' %}-->
 {% block login %}
 <div class="large-offset-3 large-6 columns">
     <form action="/auth/register/" method="post">{% csrf_token %}
