--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %}
+<!--{% extends 'main.html' %}-->
 {% block login %}
 <div class="large-offset-3 large-6 columns">
     <form action="/auth/login/" method="post">
