--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,10 @@
             <section class="top-bar-section">
                 <ul>
                     {% if username %}
-                        <li><a href="/auth/logout/">Выйти ({{ username }}) </a></li>
+                        <li>
+                            <a href="/auth/logout/">Выйти ({{ username }}) </a>
+                            <button class="add-adv" href="/add/adv/">Добавить объявление</button>
+                        </li>
                     {% else %}
                         {{ username }}
                         {{ reg }}
