--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
                     {% if username %}
                         <li>
                             <a href="/auth/logout/">Выйти ({{ username }}) </a>
-                            <button class="add-adv" href="/add/adv/">Добавить объявление</button>
+                            <button class="add-adv" href="/adv/add/">Добавить объявление</button>
                         </li>
                     {% else %}
                         {{ username }}
