--- a/templates/adv.html
+++ b/templates/adv.html
@@ -10,6 +10,9 @@
 <body>
 {% include 'navbar.html' %}
 <p> {{adv.subj}} </p>
+<p> {{adv.customer_name}} </p>
+<p> {{adv.customer_phone}} </p>
+<p> {{adv.customer_email}} </p>
 <!--{% block login %}{% endblock %}-->
 </body>
 </html>
