--- a/templates/main.html
+++ b/templates/main.html
@@ -18,7 +18,8 @@
         </div>
     </div>
 
-    <div class="row">
+
+    <div class="row-prod">
         <div class="span">
             <ul class="breadcrumb">
                 <li>Categories</li>
@@ -43,8 +44,9 @@
                     <a href=""><cars></cars></a>
                 </li>
             </ul>
-        </div>
+
 </div>
+        </div>
           {% for adv in advs %}
             <div class="col-lg-3">
                 <a href="{%  url 'adv' adv.id %}">
